--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -168,9 +168,9 @@
                                             <action selector="logoutButtonTapped:" destination="Kib-3X-Zyf" eventType="touchUpInside" id="GEN-HU-N7w"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f0R-OL-GOo">
-                                        <rect key="frame" x="17" y="27" width="53" height="30"/>
-                                        <state key="normal" title="flashing">
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f0R-OL-GOo">
+                                        <rect key="frame" x="17" y="27" width="30" height="30"/>
+                                        <state key="normal" title="test">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -927,9 +927,9 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Tinker settings" id="JeP-5e-u5d">
-                        <barButtonItem key="rightBarButtonItem" systemItem="stop" id="Rw8-5z-lcH">
+                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="a71-BG-wsc">
                             <connections>
-                                <action selector="closeButtonTapped:" destination="jih-2Y-r3C" id="Gxb-m3-9my"/>
+                                <action selector="closeButtonTapped:" destination="jih-2Y-r3C" id="ycg-Un-kgA"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -940,7 +940,7 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cP9-x7-DaI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5285" y="611"/>
+            <point key="canvasLocation" x="4739" y="605"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="BAQ-MQ-Meh">
@@ -958,7 +958,104 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TQY-oo-Zb8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4473" y="611"/>
+            <point key="canvasLocation" x="3935" y="605"/>
+        </scene>
+        <!--Web View Controller-->
+        <scene sceneID="zeS-EI-8fe">
+            <objects>
+                <viewController storyboardIdentifier="webview" modalPresentationStyle="overCurrentContext" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Aix-mE-R3J" customClass="WebViewController" customModule="Particle" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Wh8-99-PQs"/>
+                        <viewControllerLayoutGuide type="bottom" id="8Uw-Nk-P5f"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fKW-6O-vnR">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" allowsInlineMediaPlayback="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bXY-xp-ysD">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <dataDetectorType key="dataDetectorTypes"/>
+                            </webView>
+                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hDc-YW-lrv">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem id="haW-Fl-TtH">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="teh-6O-PmY">
+                                            <connections>
+                                                <action selector="closeButtonTapped:" destination="Aix-mE-R3J" id="cJT-MX-sBv"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hDc-YW-lrv" firstAttribute="trailing" secondItem="bXY-xp-ysD" secondAttribute="trailing" id="1yB-0h-QqM"/>
+                            <constraint firstItem="hDc-YW-lrv" firstAttribute="leading" secondItem="bXY-xp-ysD" secondAttribute="leading" id="4Cj-sM-EUd"/>
+                            <constraint firstItem="bXY-xp-ysD" firstAttribute="top" secondItem="fKW-6O-vnR" secondAttribute="topMargin" id="7sR-a6-0U9">
+                                <variation key="heightClass=regular-widthClass=compact" constant="64"/>
+                            </constraint>
+                            <constraint firstItem="hDc-YW-lrv" firstAttribute="bottom" secondItem="bXY-xp-ysD" secondAttribute="top" id="8QY-qd-cNR"/>
+                            <constraint firstItem="bXY-xp-ysD" firstAttribute="trailing" secondItem="fKW-6O-vnR" secondAttribute="trailingMargin" id="BKi-G0-IOx">
+                                <variation key="heightClass=regular-widthClass=compact" constant="16"/>
+                            </constraint>
+                            <constraint firstItem="hDc-YW-lrv" firstAttribute="leading" secondItem="fKW-6O-vnR" secondAttribute="leading" id="BQl-qf-lrL"/>
+                            <constraint firstItem="hDc-YW-lrv" firstAttribute="top" secondItem="Wh8-99-PQs" secondAttribute="bottom" id="T3L-4z-Ihf"/>
+                            <constraint firstItem="bXY-xp-ysD" firstAttribute="top" secondItem="hDc-YW-lrv" secondAttribute="bottom" id="brc-kb-iSf"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hDc-YW-lrv" secondAttribute="trailing" id="fIh-3y-yB0">
+                                <variation key="heightClass=regular-widthClass=compact" constant="-16"/>
+                            </constraint>
+                            <constraint firstItem="bXY-xp-ysD" firstAttribute="leading" secondItem="fKW-6O-vnR" secondAttribute="leadingMargin" id="gkD-9L-5FH">
+                                <variation key="heightClass=regular-widthClass=compact" constant="-16"/>
+                            </constraint>
+                            <constraint firstItem="hDc-YW-lrv" firstAttribute="top" secondItem="Wh8-99-PQs" secondAttribute="bottom" id="h2n-8C-M5R"/>
+                            <constraint firstItem="8Uw-Nk-P5f" firstAttribute="top" secondItem="bXY-xp-ysD" secondAttribute="bottom" id="iNo-ao-nAl"/>
+                            <constraint firstAttribute="trailing" secondItem="bXY-xp-ysD" secondAttribute="trailing" id="ij2-p2-rar"/>
+                            <constraint firstItem="hDc-YW-lrv" firstAttribute="leading" secondItem="fKW-6O-vnR" secondAttribute="leadingMargin" id="lZ3-hN-MFZ">
+                                <variation key="heightClass=regular-widthClass=compact" constant="-16"/>
+                            </constraint>
+                            <constraint firstItem="bXY-xp-ysD" firstAttribute="leading" secondItem="fKW-6O-vnR" secondAttribute="leading" id="qeW-OD-NQQ"/>
+                            <constraint firstItem="8Uw-Nk-P5f" firstAttribute="top" secondItem="bXY-xp-ysD" secondAttribute="bottom" id="srw-eg-rUV"/>
+                            <constraint firstAttribute="trailing" secondItem="hDc-YW-lrv" secondAttribute="trailing" id="yHD-TU-VF5"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="1yB-0h-QqM"/>
+                                <exclude reference="4Cj-sM-EUd"/>
+                                <exclude reference="8QY-qd-cNR"/>
+                                <exclude reference="fIh-3y-yB0"/>
+                                <exclude reference="h2n-8C-M5R"/>
+                                <exclude reference="lZ3-hN-MFZ"/>
+                                <exclude reference="7sR-a6-0U9"/>
+                                <exclude reference="BKi-G0-IOx"/>
+                                <exclude reference="gkD-9L-5FH"/>
+                                <exclude reference="srw-eg-rUV"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <exclude reference="bXY-xp-ysD"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="fIh-3y-yB0"/>
+                                <include reference="h2n-8C-M5R"/>
+                                <include reference="lZ3-hN-MFZ"/>
+                                <include reference="7sR-a6-0U9"/>
+                                <include reference="BKi-G0-IOx"/>
+                                <include reference="gkD-9L-5FH"/>
+                                <include reference="srw-eg-rUV"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="navBar" destination="hDc-YW-lrv" id="t5I-Oe-vuf"/>
+                        <outlet property="webView" destination="bXY-xp-ysD" id="XbS-hi-I9Q"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FU3-TN-HU4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5483" y="605"/>
         </scene>
     </scenes>
     <resources>
